working fuzzy and connected components